# service_Desk_v2

client/: index.html  package.json  tailwind.config.js
client/public/: manifest.json
client/src/: Routes.jsx  index.jsx
client/src/api/: auth.js  roles.js  users.js  workflows.js
client/src/components/ui/: Breadcrumb.jsx  Header.jsx
client/src/config/: agentPresets.js
client/src/context/: AuthContext.jsx
client/src/pages/agent-configuration/: index.jsx
client/src/pages/agent-configuration/components/: AgentSidebar.jsx  CommunicationSettingsTab.jsx  GeneralSettingsTab.jsx  IntegrationConfigTab.jsx  RoleAssignmentTab.jsx
client/src/pages/agent-dashboard/: index.jsx
client/src/pages/agent-dashboard/components/: ActivityFeed.jsx  (+5 more)
client/src/pages/integration-settings/: index.jsx
client/src/pages/login/: index.jsx
client/src/pages/support-chat-interface/: index.jsx
client/src/pages/user-management/: index.jsx
client/src/pages/workflow-designer/: index.jsx
client/src/styles/: tailwind.css
server/: .env  main.py  pyproject.toml  service_desk.db
server/api/v1/endpoints/: agents.py  auth.py  messages.py  permissions.py  roles.py  tickets.py  users.py  workflows.py
server/api/v1/schemas/: agent_config.py  message.py  permission.py  role.py  ticket.py  token.py  user.py  workflow.py
server/core/: config.py  dependencies.py
server/db/: models.py  session.py
server/service_desk_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/services/workflow/: SLA.md  node.py  nodes.py  test.json  test.py  workflow.py  workflow2.py
(+22 files in other folders)
